@@ -22,6 +22,7 @@
                         @{argLine}
                         --add-opens javamm.code/academy.devonline.javamm.code.fragment.operation=ALL-UNNAMED
                         --add-opens javamm.code/academy.devonline.javamm.code.fragment.expression=ALL-UNNAMED
+                        --add-opens javamm.code/academy.devonline.javamm.code.fragment.function=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
